# CollabGroup2122

./: .breakpoints  accounts.json  allowed.json  assignments.py  classes.txt  main.json  main.py  pyproject.toml  schoology.py  temp.html
static/stylesheets/: darkblue.css  halloween.css  light.css
templates/: alg2.html  bio.html  calendar.html  chemistry.html  cj.html  english.html  flog.html  grades.html  health.html  history.html  latin.html  main.html  notepad.html  notes.html  pe.html  pearson.html  physics.html  planner.html  register.html  resources.html  schoology.html  settings.html  spanish.html  textbook.html
templates/physics/: metric-units.html  qualitativequantitative.html
